StackView: fix crash when recursively removing items

This can happen when e.g. calling clear() in Component.onDestruction
in response to a pop() call.

The patch fixes the crash by warning and returning early.

If users really need to do this, the clear() call can be delayed:

    Component.onDestruction: {
        Qt.callLater(function() { stackView.clear(StackView.Immediate) })
    }

Change-Id: If3cf07495bb34b96089522f44c36976bd6c62492
Fixes: QTBUG-80353
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit aaec25a798352fc222f86ab3b299384575f51dc8)
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>