src/quicktemplates2/qquickstackview_p_p.h
@@ -93,6 +93,7 @@ public:
     void depthChange(int newDepth, int oldDepth);
 
     bool busy = false;
+    bool removingElements = false;
     QString operation;
     QJSValue initialItem;
     QQuickItem *currentItem = nullptr;
